--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.5.0"
 clap = { version = "4.5.21", features = ["derive"] }
 figlet-rs = "0.1.5"
 nom = "7.1.3"
+tabled = "0.17.0"
